--- a/contents/accessible/make_your_data_available.tex
+++ b/contents/accessible/make_your_data_available.tex
@@ -23,7 +23,7 @@ data cleaning.
  
 \subsubsection*{In the context of Aire Guru \ldots} 
 
-Our tool uses the air quality data provided by the city of Málaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
+Our webtool uses the air quality data provided by the city of Málaga in its open data portal.(https://datosabiertos.malaga.eu/)\\
 \newpage
 \begin{figure}[ht]
     \centering
