--- a/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
+++ b/contents/accessible/use_concepts_and_language_that_your_user_understands.tex
@@ -11,7 +11,7 @@ the meaning in a natural way.
 Consider what type of representational format is most appropriate to the task. If it is not possible, we will provide de 
 resources needed to help the user to understand and place the information in context. \\
 
-We should stady which type of graphs fits better to which kind of data,A graph may not necessarily be the 
+We should stady which type of representation fits better to which kind of data,A graph may not necessarily be the 
 clearest way to represent information.\\
 
 We should take into account the target audience, and how we can most effectively transmit information to them. 
@@ -22,8 +22,7 @@ between sexes, we will use a pie chart.
 \subsubsection*{In the context of Aire Guru \ldots} 
 
 The Aire Guru tool presents the information in the native language of the city, using simple vocabulary and a 
-straightforward style.\\
-Colors and graphic resources are used as icons. In addition, a unified design structure to represent data has 
+straightforward style. Colors and graphic resources are used as icons. In addition, a unified design structure to represent data has 
 been used over the whole site, giving the user a consistent visualization experience. \\
 
 One of the objectives is to represent pollution by areas of the city, which is why a map has been used - the 
@@ -64,14 +63,14 @@ graph of stacked bars, since it is easy to see what proportion of the total AQI 
     \caption{Charts}
 \end{figure}
 
-In addition, to explain the concept of AQI and create an awarnes about the influence that air pollution has on us, Aire Guru provides a
+In addition, to explain the concept of AQI and create an awarnes about the influence that air pollution has on us, Aire Guru includes it in the
 glossary. This aids understanding of why air pollution should matter to us, with descriptions of the pollutants, medical complications, sources of contamination, the iconography used and
 an explanation of what AQI is and how it is calculated. \\
 
 \subsubsection*{Evaluation}  
 
 \begin{itemize}
-    \done The language used in the whole tool is a common language, avoiding the use of difficult scientific terminology but providing clearly described information to understand the situation.
+    \done The language used in the whole webtool is a common language, avoiding the use of difficult scientific terminology but providing clearly described information to understand the situation.
     \done The most appropriate graphs for each type of data have been researched and chosen.
     \crossed Some specific terms could not be substituted as "Air Quality Index".
     \done The tools necessary to understand the concept have been provided. The European standard of air quality has been used to
