--- a/contents/compelling/engage_the_user_on_an_emotional_level.tex
+++ b/contents/compelling/engage_the_user_on_an_emotional_level.tex
@@ -1,7 +1,5 @@
 \subsection{Engage the user on an emotional level}
-It is a truism that you can lead a horse to water, but you can't make it drink. \\
-
-So it is with our users.
+It is a truism that you can lead a horse to water, but you can't make it drink. So it is with our users.
 No matter how easy to access, how important, and how personalised the information, if we cannot engage and maintain the user's interest,
 they will likely ignore the information we provide, possibly to their significant detriment.
 We must think like salespeople, like bestselling authors, like ad-agency strategists.
@@ -51,6 +49,8 @@ Aire-Guru uses three specific techniques to generate emotional engagement:
 \subsubsection*{Evaluation}  
 
 \begin{itemize}
-    \done
+    \done Dangerous situation can easierly spotted.
+    \done Clear symbology.
+    \done Perfectlly defined workflow.
     \crossed
 \end{itemize}
