--- a/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
+++ b/contents/compelling/the_user_interface_must_be_obvious_and_familiar.tex
@@ -25,15 +25,17 @@ requires information from the system, they receive an indication that their requ
 \subsubsection*{Suggested strategies} 
 
 We must analyze carefully what information we want to presentaccording to our objetive. We will make a clear design, where all the elements are easy to recognize.
-The structure will entail a logical sequence, as if it were a narrative history.
+The structure will entail a logical sequence, as if it were a narrative history.\\
+
 Each action that the user perform, must be clearly acknowledged (eg by some change in a button, or a spinning wheel icon) results must be delivered in less than five seconds.
-We will steer clear of complicated representations, we will aim for familiarity and intuitiveness.
-For example, if a calendar is used for the selection of dates, it doesn't make sense to use an hourglass, this will just be confusing forthe user.
+We will steer clear of complicated representations, we will aim for familiarity and intuitiveness.For example, if a calendar is used for the selection of dates, it doesn't 
+make sense to use an hourglass, this will just be confusing forthe user.\\
+
 Offer flexibility, the user must be able to interact with the interface and choose what they want to see.
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
-Our tool uses an interpretation of Google's Material Design, which is very clean, without borders or decorations.
+Our webtool uses an interpretation of Google's Material Design, which is very clean, without borders or decorations.
 We chose a range of blue shades in combination with white and gray to evoke a relaxed atmosphere.
 Importantly, we've taken care that all text has a good level of contrast with the background, so that it is easy to read.\\
 
@@ -75,7 +77,7 @@ select the date we want.\\
     concentrate on the meaning of the data, rather than being distracted by trying to figure out what to do.\\
     
     Due to the large amount of data that is offered to the user, a waiting wheel has been implemented to indicate
-    that the tool is processing information. Each time a control is pressed on the page, it is indicated with a change
+    that the webtool is processing information. Each time a control is pressed on the page, it is indicated with a change
     of color tonality. Also, progressive transitions are used, to indicate a process is happening.
 
     
