--- a/contents/compelling/your_site_should_look_good.tex
+++ b/contents/compelling/your_site_should_look_good.tex
@@ -4,9 +4,7 @@ It is important that the information is attractive, eye-catching and with sparkl
 of good data presentation, using a structure that guides the user in a logical and orderly manner.\\
 
 We want to grab the users attention from the outset. For this we propose the following desirable features for the tool- that it be fun, entertaining,
-modern, current, easy to use, high quality, attractive and beautiful.\\
-
-Although some of these characteristics are subjective, there are techniques available to achieve these objectives.\\
+modern, current, easy to use, high quality, attractive and beautiful. Although some of these characteristics are subjective, there are techniques available to achieve these objectives.\\
 
 Other more technical characteristics are: \\
 
@@ -17,7 +15,7 @@ should also follow this principle. \\
 more easily.\\
 
 \textbf{Details.} A label with different typology or other color may jarr the user's perception. Only use when
-we want to highlight something in particular! \\
+we want to highlight something in particular!. \\
 
 \textbf{Sena de identidad.} It is highly recommended to 'brand' ourselves, so that users can recognize us quickly. For this we can utilize a symbol, a combination of colors, a logo, etc.\\
 
@@ -49,15 +47,17 @@ lower area where we will find the zone and custom history.
     \caption{Heading}
 \end{figure}
  
-    The symbol of our tool is a genius, is a guru. We also include "Aire" in the logo, because it perfectly represents 
-    what we show with our tool. Aire Guru is the genius of air.
+    The symbol of our webtool is a genius, is a guru. We also include "Aire" in the logo, because it perfectly represents 
+    what we show with our webtool. Aire Guru is the genius of air.
     
-    Finally, we've taken into account that the user may wish to use our tool on different devices. We've implemented
+    Finally, we've taken into account that the user may wish to use our webtool on different devices. We've implemented
     two different formats, one for larger screens such as the computer and another for smaller format tablets or mobiles.
 
 \subsubsection*{Evaluation}  
 
 \begin{itemize}
-    \done
+    \done The design is organized and clean. 
+    \done The user can find easierly what he is looking for.
+    \done Minimized numbers of clicks since the most relevant info is shown directly in the launching page.
     \crossed Although there have been attempts to implement the design aesthetics that are now trending on the market, the design can be improved.
 \end{itemize}
