--- a/contents/introduction/_section.tex
+++ b/contents/introduction/_section.tex
@@ -11,7 +11,7 @@ commercial and 'public good' reasons.\\
 We have ways of delivering this information that are effectively free, and can be made extremely compelling
 if presented in the right way. This chapter is a guide to 'the right way'.\\
 
-We have created a tool - Aire Guru - which collects air pollution data periodically, stores it for historical use, 
+We have created a webtool - Aire Guru (https://airquality.guru/) - which collects air pollution data periodically, stores it for historical use, 
 processes it to extract relevant information, personalizes it to engage the user with regard to their individual
 circumstance, visualizes it in an easy to understand format, and provides it online to facilitate its accessibility. Furthermore,
 descriptions of all the data and how it has been processed are also provided to raise public awareness of the value
