--- a/contents/introduction/structure_of_this_document.tex
+++ b/contents/introduction/structure_of_this_document.tex
@@ -1,13 +1,12 @@
 \subsection{The structure of this document}
 
-We first provide a short introduction to the Aire Guru project in order to provide context. \\
-
+We first provide a short introduction to the Aire Guru project in order to provide context.
 In the following sections, we provide a set of guidelines that can be used to make big data
 accessible, relevant and compelling for the average user. Such principles are applicable to 
 online products in general, but we consider them here with special reference to presenting
 data, as opposed to e.g. social media sites. \\
 
-Firstly, we deal with with general preliminaries, that in a commercial context would be called
+Firstly, we deal with general preliminaries, that in a commercial context would be called
 'Market Research' and 'The Business Case'. These ideas are just as applicable to the delivery of
 public-good data as commercial offerings. \\
 
