--- a/contents/preliminaries/know_your_user.tex
+++ b/contents/preliminaries/know_your_user.tex
@@ -26,23 +26,17 @@ options.
 \subsubsection*{In the context of Aire Guru \ldots}
 
 Air Guru is aimed at the general population, therefore it's appropriate to present complete information in simple way. In addition, we pay special attention to users who may have a
-disease or medical condition, caused or affected by, air pollution.
-During the market study, we realized that many existing tools offered information about air pollution in real time, but we could see the following deficiencies:
+disease or medical condition, caused or affected by, air pollution.\\
+
+During the market study, we realized that many existing tools offered information about air pollution in real time, but we could missed the following deficiencies:
 \begin{itemize}
-    \item Obsolete measurements. Measurements need to be taken regularly, since there can be huge differences
-    between pollution levels at different times of the day.
-    \item Limited geographic coverage. The data must cover a reasonable proportion of areas that people spend significant time in.
-    \item Insufficiently granular measurements. Measurements must be at a reasonably fine level of granularity. One single measurement for an entire city is not useful.
-    \item Poor presentation. Often the information is presented in an uninterpreted form, making it difficult for users to visualize, especially in a geographic sense.
-    \item Poor discrimination and interpretation. Many tools show individual values as a number or a colour. This information is not
-    enough for the user to take control of their exposure. Such visualizations are not really compelling. 
     \item Unnexistent costumized pollutan's exposure. We are interested to know to which levels of pullutions we are exposed on the long term, no only in a determinate time.
     \item Need to use complicated devices to monitor the exposition. Our gol is to facilitate the information to the user with the minimal complication for them.
     \item No related information about pollutants and their influence on our health or medical conditions.
 \end{itemize}
 
-Once implemented, we tested the tool with 14 users. Our tool integrates Google Analytics that allow us to evaluate
-user behavior, how many pages they access, and how long they stay on them. Also, after the test, we conducted a survey to measure not only the level of satisfaction with the tool, but also to verify the utility and if the user was able to achieve their objective.
+Once implemented, we tested the webtool with 14 users. Our webtool integrates Google Analytics that allow us to evaluate
+user behavior, how many pages they access, and how long they stay on them. Also, after the test, we conducted a survey to measure not only the level of satisfaction with the webtool, but also to verify the utility and if the user was able to achieve their objective.
 \begin{figure}[ht]
     \centering
    \subfigure[Aire Guru Form]
