--- a/contents/preliminaries/understand_your_purpose.tex
+++ b/contents/preliminaries/understand_your_purpose.tex
@@ -11,7 +11,7 @@ We can consider the characteristics that other products do not have, such as mor
 greater coverage of information or a functionality that does not exist up to now, for example, to use the
 information that we offer to solve a daily problem.\\
 
-Once our mission is defined, we face a series of problems; the user may not be aware that they need a feature that we provide. We have a double challenge, to offer it to users and
+Once our mission is defined, we face a series of problems; the user may not be even aware that they need a feature that we provide. We have a double challenge, to offer it to users and
 to make them realize that it is really necessary, that it helps them in their routine or daily life.\\
 
 This is where we can make use of the most appropriate marketing techniques to reach our users.
@@ -34,7 +34,7 @@ in the short or long term.\\
 
 Aire Guru tries to alert them to how air quality influences us, in a way that everyone, independent of their cultural or educational level,
 can clearly understand. It aims to make the information, and what that information means, available to everyone. We show how harmful it is to live in a highly polluted area and what the most common sources of pollution
-are, so that we can increase awareness and empower users to do something about it.
+are, so that we can increase awareness and empower users to do something about it.\\
 
 
 Aire Guru includes in its glossary the most common medical conditions that may be affected by air pollution, the pollutants and the sources that produce these pollutants. It is accompanied by an iconography
