--- a/contents/relevant/present_consequences_and_outcomes.tex
+++ b/contents/relevant/present_consequences_and_outcomes.tex
@@ -27,12 +27,12 @@ If not directly, we the combination of them. Next, we decide which values are mo
 
 Our main objective is to create awareness of the importance of air pollution in our health. For this we investigate different concepts:
 \begin{itemize}
-    \item What diseases are affected by air pollution
-    \item What pollutants are those that create or influence diseases
-    \item What are the sources of each pollutant?
+    \item What diseases are affected by air pollution.
+    \item What pollutants are those that create or influence diseases.
+    \item What are the sources of each pollutant?.
     \item What is the representative measure of the level of air pollution.
-    \item How it is calculated and what parameters we need for its calculation
-    \item What are the harmful levels in general and for each pollutant
+    \item How it is calculated and what parameters we need for its calculation.
+    \item What are the harmful levels in general and for each pollutant.
 \end{itemize}
 The measure that best represents the level of air pollution, in this case is the AQI. The city of Málaga is covered by the European legislation, 
 so we focus investigations of official sources in this regulation.
@@ -76,6 +76,6 @@ totally different, designed to clearly convey danger. \\
 
 \begin{itemize}
     \done The objective has been clearly defined and an investigation has been carried out, determining if the dataset is appropriate.
-    \done Worrying levels have been defined as poor, bad and unhealthy and are represented in the Air Guru tool. They stand out clearly so that the user is able to locate them quickly.
+    \done Worrying levels have been defined as poor, bad and unhealthy and are represented in the Air Guru webtool. They stand out clearly so that the user is able to locate them quickly.
     \done The workflow is satisfactory, since the user knows the level of pollution at any location, at a simple glance. It is easy to explore the information further, if the user wishes.
 \end{itemize}
