--- a/contents/relevant/the_facts_and_just_the_facts.tex
+++ b/contents/relevant/the_facts_and_just_the_facts.tex
@@ -25,7 +25,7 @@ simply because it appears in the dataset, and don't include distracting technica
 
 The dataset used contains data such as the identifier of the measurement station, whether the station is fixed or mobile
 and extra-specific measures for an application that is provided by the same company that collects the data. This data is not useful for us.
-For our tool, only the coordinates of the measurement station have been used, as well as the time at which the measurement was recorded, and the most relevant value of the five pollutants Co, No2, O3, Pm1, Pm 2.5 and Pm10.\\
+For our webtool, only the coordinates of the measurement station have been used, as well as the time at which the measurement was recorded, and the most relevant value of the five pollutants Co, No2, O3, Pm1, Pm 2.5 and Pm10.\\
 
 In addition, the measurement is unique for everyone and the general, the AQI, the ranges are exactly the same for everyone, so the user just has to make the effort to understand a single concept.\\
 
@@ -57,5 +57,5 @@ intermediate measures in the dataset.\\
     it lends veracity to the data. Therefore we have given it a secondary position so it doesn't distract the user.
     \crossed It has implemented a functionality to export the data. The comments of our testers revealed
     that this functionality is not useful for the average user, since they do not have the necessary tools to
-    analyze the data and all the information is represented in a better format in the tool itself.
+    analyze the data and all the information is represented in a better format in the webtool itself.
 \end{itemize}
