--- a/contents/accessible/let_the_world_know_that_you_exist.tex
+++ b/contents/accessible/let_the_world_know_that_you_exist.tex
@@ -9,8 +9,8 @@ The best way is to advertise the product in the right media with right format.
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
-Our tool is implemented for the city of Málaga, so we are currently working to publicize it in this city.
-It is currently available in the open data portal in the web site tab (https://datosabiertos.malaga.eu/aplicaciones) \\
+Our webtool is implemented for the city of Málaga, so we are currently working to publicize it in this city.
+It is currently available in the open data portal in the web site tab (https://datosabiertos.malaga.eu/aplicaciones). \\
 
 Aire Guru participated in the first open data reuse contest organized by the Málaga City Council (http://cemi.malaga.eu/es/novedades/detalle/1-Concurso-de-Reutilizacion-de-Datos-Abiertos-del-Ayuntamiento-de-Malaga)
 and was a finalist in the web page category.
