--- a/contents/compelling/solve_a_real_problem.tex
+++ b/contents/compelling/solve_a_real_problem.tex
@@ -52,7 +52,7 @@ user can view the exposure to the pollution to which he has been subjected.
         \includegraphics[width=8cm]{importedDataDecember}
         \caption{Personal Records. December}
     \end{figure}
-    We can see the exposure to air pollution since 2018 without having to have been using the tool since
+    We can see the exposure to air pollution since 2018 without having to have been using the webtool since
     Using the import Google chronology button, we can import the location history provided by the
     pollution that has been exposed since 2018. In the help section we can find a guide how to
     export and import this history of locations.
