--- a/contents/frontmatter/abstract.tex
+++ b/contents/frontmatter/abstract.tex
@@ -1,9 +1,9 @@
 The steps involved in collecting, analysing and making important datasets available to the general public are well understood. \\
 
-But how do we make such data accessible, relevent, and compelling for the average user? \\
+But how do we make such data accessible, relevent, and compelling for the average user?. \\
 
 In this chapter we provide a framework for considering this question, providing guidance and checklists,
-and show how we applied this framework in the development of the Aire Guru tool developed by the first
+and show how we applied this framework in the development of the Aire Guru webtool developed by the first
 author at the International University of La Rioja. \\
 
 We also use the framework to evaluate the effectiveness of Aire Guru in creating awareness of air pollution and its effects. \\
