--- a/contents/relevant/personalize_the_data_for_each_user.tex
+++ b/contents/relevant/personalize_the_data_for_each_user.tex
@@ -14,14 +14,14 @@ user as an individual.
 
 \subsubsection*{Suggested strategies} 
 
-We should study how the data will help the user or user-subgroups and from this point, make it more specific. In this way
+We should study how the data will help the user or user-subgroups as we mention in the section \textit{3.3 Know your user} and from this point, make it more specific. In this way
   we go from obtaining relevant data in a general way to be relevant in a personal way. We have to think about the
   particular user, and find a way to extract the results that are specifically adapted to them in a particular
   moment and place.
 
 \subsubsection*{In the context of Aire Guru \ldots}
 
- We are all interested in the pollution that surrounds us, since it affects our health. The tool
+ We are all interested in the pollution that surrounds us, since it affects our health. The webtool
  Aire Guru has been designed to specialize in this area. For those people who are especially sensitive to air pollution, Aire Guru shows the air pollution with respect to the six most common medical conditions that
  are affected by air pollutants.
  
@@ -38,7 +38,7 @@ We should study how the data will help the user or user-subgroups and from this 
   \caption{Medical Condition Filter}
 \end{figure}
 
-Here we see, in each case, for each medical condition, a subset of pollutants which most influence each condition is shown.\\
+In the \textit{Figure X.X} we see, in each case, for each medical condition, a subset of pollutants which most influence each condition is shown.\\
   
 The answer to the key question, how can the data be related to a specific time and place, leads us to
 implementation of a personal history of exposure to pollution. That is, to know at all times what pollution
@@ -74,7 +74,7 @@ If the user gives us his permission to store this data, we can show them their p
 
 It is possible that the user may have started to use the application and not yet have any available data.
 To deal with this, we offer the possibility of importing the Google location history, enabling the user to be able to visualize
-exposure to pollution since the beginning of 2018 even if they have not been using the tool for  all of that period.\\
+exposure to pollution since the beginning of 2018 even if they have not been using the webtool for  all of that period.\\
 
 We will have to take into account that in order to read the user's position and store their data, we must
 have their explicit permission. We must implement mechanisms that provide us with the necessary security to safeguard our users data. The measures taken will be explained later.
