Address, minor text change.

--- a/contents/frontmatter/_section.tex
+++ b/contents/frontmatter/_section.tex
@@ -6,7 +6,7 @@
 \ead{luz@illuminous.io}
 \author{Antony Blakey}
 \ead{antony@illuminous.io}
-\address{Illuminous}
+\address{Illuminous\\ Johan van Hasseltweg 43-II, 1021 KN, Amsterdam}
 
 \begin{abstract}
 \input{contents/frontmatter/abstract} 
