--- a/contents/introduction/structure_of_this_document.tex
+++ b/contents/introduction/structure_of_this_document.tex
@@ -15,4 +15,4 @@ Each principle is described, along with suggested strategies to achieve that goa
 how that principle is reflected in the context of our Aire Guru project. We conclude with some
 general comments, and provide a suggested reading list for each major section. \\
 
-We have designed this chapter according to these self-same principles, where applicable.
+We have applied these same principles to the design of this chapter.
