added content to remove barriers

--- a/contents/accessible/remove_all_barriers_to_access.tex
+++ b/contents/accessible/remove_all_barriers_to_access.tex
@@ -1,4 +1,32 @@
 \subsection{Remove all barriers to access}
+We already told about offering the data directly to the user but going back to the concept that available
+does not mean accessible. If we lock ourself and make a completly private platform, we would lose the oportunity
+to bring the information to the users.\\
 
-THIS SEEMS TO BE THE WRONG CONTENT FOR "CONVENIENT"
+We break these barriers building a service free of charge, or at least as free as it can be. Of course, if we are 
+working with data of third parties and they have a restricted policy, we will need to adjust the rates to cover
+these restrictions.\\
 
+It is recomendable to do not force our users to identify theirself or provide data if this is not
+extrictly necesary for the proper behaviour of our data representation. As we mention before, collecting data from our
+users requires a major efford to ensure their security. Furthemore, we see like every year, the laws ajust to provent
+the abuse with the data of the users. If we use any user's data, we should make sure it not compromise the law.\\
+
+All of us have noticed how annoying is to be reading an article when more than the 50\% of the information is advertising.
+We problably do not want to give the same impression to our users since it can repel them to the point that they will no longer
+user our tool. If we need to use this kind of tecnics to support our system, We will problably choose the right places to offer 
+these advertising without interfering in the representation of our information.
+
+
+\subsubsection*{Suggested strategies} 
+
+To remove the biggest amount of barriers we will try to offer a low rate system, no force the user to provide any unjustified 
+data and avoid advertising which obstructs the representation of our data.
+
+\subsubsection*{In the context of Aire Guru \ldots} 
+
+Aire Guru is available online completely free of charge. It requieres login, since it shows the personal records of the 
+user exposure to pollution. However, all the rest of the funtionabilities are offered to all the users, identified and no 
+identified.
+
+Aire Guru does not uses publicity.
